Be specific about the padding to stop it from growing too large.

--- a/source/wp-content/themes/wporg-developer-2023/src/code-source/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/code-source/style.scss
@@ -19,6 +19,11 @@ $border_radius: 2px;
 			color: var(--wp--preset--color--blueberry-1) !important;
 			font-weight: 400;
 			font-size: 13px;
+
+			&:focus {
+				border-width: unset;
+				padding: var(--wp--preset--spacing--10);
+			}
 		}
 
 		> span:last-child {
